--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 2;
     background-color: #CF2B2B;
+    display: flex;
+    flex-direction: column;
     color: #FFFFFF;
 }
 
@@ -55,7 +57,6 @@ body{
 .itens{
     margin-top: 8px;
     display: flex;
-    overflow-x: scroll;
     padding-left: 20px;
     margin-bottom: 30px;
 }
@@ -135,6 +136,9 @@ ion-icon {
 
 .conteudo{
     padding-top: 122px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .fim{
@@ -158,8 +162,58 @@ ion-icon {
     position: fixed;
     bottom: 0;
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #gambiarra{
     height: 120px;
 }
+
+@media only screen and (max-width: 768px) {
+    .header {
+      height: auto;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 10px;
+    }
+    
+    #DE {
+      font-size: 32px;
+      line-height: 40px;
+      margin: 0;
+    }
+    
+    #minutes {
+      font-size: 14px;
+      line-height: 16px;
+      margin: 0;
+    }
+    
+    .texto {
+      font-size: 18px;
+      line-height: 24px;
+      padding: 10px;
+    }
+    
+    .itens {
+      margin-top: 8px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      padding: 10px;
+      overflow-x: scroll;
+    }
+    
+    .imagem img {
+      max-width: 100%;
+      height: auto;
+    }
+    
+    .prato {
+      width: 100%;
+      margin: 0 0 16px;
+    }
+  }
